force-app/main/default/objects/Opportunity_Stage_Mapping__c/Opportunity_Stage_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Using for opportunity Stage mapping with the status return from Backend system</description>
    <label>Opportunity Stage Mapping</label>
</CustomObject>