force-app/main/default/objects/Opportunity_Stage_Mapping__c/fields/Application_status__c.field-meta.xml
<CustomField>
    <fullName>Application_status__c</fullName>
    <description>Application status using in Backend system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>