force-app/main/default/objects/Opportunity_Stage_Mapping__c/fields/Host_System__c.field-meta.xml
<CustomField>
    <fullName>Host_System__c</fullName>
    <description>Backend host systems.
Ex. SLOS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Host System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>