force-app/main/default/objects/Opportunity_Stage_Mapping__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>Opportunity type; 
ex. Credit, Non-credit</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>