force-app/main/default/objects/Opportunity_Stage_Mapping__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Stage using in Salesforce</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>