force-app/main/default/objects/Opportunity_Stage_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Host_System__c</columns>
    <columns>Application_status__c</columns>
    <columns>Result__c</columns>
    <columns>Stage__c</columns>
    <columns>Opportunity_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>